# icaros

./: .gitignore  Cargo.toml  README.md  create_ansi_art.sh  install.sh  lint.sh  run.sh  test_demo.sh  test_monitor.rs  test_setup.sh
.github/scripts/: bump-version.sh
.github/workflows/: ci.yml  manual-release.yml  release.yml  test.yml
animations/: spells.yaml
animations/art/: jungle.ans
art/: jungle_small.ans
prompts/: CLAUDE.md  CLAUDE_UPDATE.md  ICAROS.md  README.md
src/: animations.rs  file_tree.rs  fs_monitor.rs  fs_monitor_option2.rs  git.rs  ignore_patterns_template.txt  lib.rs  logger.rs  main.rs  stash.rs  state.rs  ui.rs
test_locked_files/src/: main.rs
tests/: integration_test.rs  simple_test.rs  test_patterns.rs  test_state_restore.rs
