[package]
name = "icaros"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
ratatui = "0.26"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
notify = "6.1"
dirs = "5.0"
git2 = "0.18"
chrono = { version = "0.4.41", features = ["serde"] }
fs_usage_sys = { path = "/Users/madhavajay/dev/fs_usage_sys" }
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
