[package]
name = "icaros"
version = "0.1.4"
edition = "2021"
authors = ["Madhava Jay"]
description = "A modern tmux session manager with an interactive TUI"
repository = "https://github.com/madhavajay/icaros"
homepage = "https://github.com/madhavajay/icaros"
documentation = "https://github.com/madhavajay/icaros"
readme = "README.md"
license = "Apache-2.0"
keywords = ["tmux", "terminal", "tui", "session-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "icaros"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
ratatui = "0.28"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
notify = "6.1"
dirs = "5.0"
git2 = { version = "0.18", features = ["vendored-openssl"] }
chrono = { version = "0.4.41", features = ["serde"] }
fs_usage_sys = "0.1.3"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
strip-ansi-escapes = "0.2"
image = "0.25"
ratatui-image = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

# For local development of fs_usage_sys
# Uncomment the following lines to use the local version instead of crates.io
[patch.crates-io]
fs_usage_sys = { path = "/Users/madhavajay/dev/fs_usage_sys" }
